--- a/images/styles/portfolio.css
+++ b/images/styles/portfolio.css
@@ -13,7 +13,7 @@
 nav{
     display: flex;
     justify-content: space-between;
-    margin: 50px 220px;
+    padding: 50px 220px;
 }
 nav li{
     list-style: none;
